# oxigraph-cloud

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Containerfile  Containerfile.tikv  LICENSE  Makefile  NOTICE  PLAN.md  README.md  cloud-native-oxigraph.md  deny.toml  docker-compose.tikv.yml
.cargo/: audit.toml
.claude/skills/architect/: SKILL.md
.claude/skills/compliance/: SKILL.md
.claude/skills/k8s-deploy/: SKILL.md
.claude/skills/legal/: SKILL.md
.claude/skills/planner/: SKILL.md
.claude/skills/rust-dev/: SKILL.md
.claude/skills/test-qa/: SKILL.md
.claude/skills/tikv-ops/: SKILL.md
.github/workflows/: ci.yml  container-build.yml  release.yml
crates/oxigraph-cdc/: Cargo.toml
crates/oxigraph-cdc/src/: channel.rs  lib.rs  notification.rs  server.rs  subscription.rs
crates/oxigraph-coprocessor/: Cargo.toml
crates/oxigraph-coprocessor/src/: aggregate.rs  bloom.rs  filter.rs  lib.rs  plugin_api.rs  protocol.rs  scan.rs
crates/oxigraph-server/: Cargo.toml
crates/oxigraph-server/src/: changelog.rs  main.rs  telemetry.rs  transactions.rs
crates/oxigraph-shacl/: Cargo.toml
crates/oxigraph-shacl/src/: error.rs  lib.rs  report.rs  shapes.rs  validator.rs
crates/oxigraph-shacl/tests/: shacl_tests.rs  shape_constraints.rs  validation_basic.rs
crates/oxigraph-shacl/tests/data/: person-shapes.ttl  valid-person.ttl
crates/oxigraph-tikv/: Cargo.toml
crates/oxigraph-tikv/src/: backend.rs  lib.rs
crates/oxigraph-tikv/tests/: integration.rs
deploy/: docker-compose.yml  tikv-node-deployment.yaml  tikv-pd-deployment.yaml
deploy/helm/oxigraph-cloud/: Chart.yaml  values-sandbox.yaml  values-tikv.yaml  values.yaml
deploy/helm/oxigraph-cloud/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml  route.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
deploy/k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml
deploy/monitoring/: grafana-dashboard.json  servicemonitor.yaml
deploy/openshift/: kustomization.yaml  route.yaml  serviceaccount.yaml
docs/: 01-overview.md  02-oxigraph-storage-architecture.md  03-rudof-shacl-integration.md  04-distributed-sparql-theory.md  05-tikv-backend.md  06-backend-alternatives-rejected.md  07-storage-trait-design.md  08-references.md  api-reference.md  architecture-guide.md  audit-oxigraph-storage.md  backup-restore.md  benchmark-results.md  conformance-report.md  coprocessor-implementation-plan.md  coprocessor-pushdown-mapping.md  legal-license-audit.md  operations-runbook.md  project-status.md  query-optimization-design.md  sandbox-deployment-report.md  sandbox-quickstart.md  security-audit-report.md  security-compliance-assessment.md  security-deployment.md  shacl-api-spec.md  test-conformance-suite.md  test-plan.md  testing-hardening-plan.md  tikv-client-compatibility.md  tikv-dev-setup.md  tikv-key-encoding.md  tikv-operations-guide.md  tikv-sizing-guide.md  tikv-tuning.md  troubleshooting.md
docs/adr/: 001-fork-strategy.md  002-generics-vs-dyn-dispatch.md  003-async-strategy.md  004-shacl-validation-report-format.md
helm/oxigraph-cloud/: Chart.yaml  values-sandbox.yaml  values-tikv.yaml  values.yaml
helm/oxigraph-cloud/templates/: NOTES.txt  _helpers.tpl  certificate.yaml  configmap.yaml  networkpolicy.yaml  pdb.yaml  route.yaml  service-headless.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
helm/tikv-cluster/: Chart.yaml  values.yaml
helm/tikv-cluster/templates/: _helpers.tpl  pd-service-headless.yaml  pd-service.yaml  pd-statefulset.yaml  tikv-service-headless.yaml  tikv-statefulset.yaml
oxigraph/bench/bsbm-tools/: README.md
oxigraph/lib/oxigraph/: Cargo.toml
oxigraph/lib/oxigraph/benches/: tikv_bench.rs
oxigraph/lib/oxigraph/src/: store.rs
oxigraph/lib/oxigraph/src/storage/: backend_tests.rs  backend_trait.rs  binary_encoder.rs  mod.rs  tikv.rs
oxigraph/testsuite/N3/grammar/: test_eye.txt
scripts/: chaos-test.sh  shacl-compliance.sh  tikv-dev-cluster.sh  tikv-smoke-test.rs  w3c-compliance.sh
tests/benchmark/: Cargo.toml
tests/benchmark/benches/: storage_bench.rs
tests/chaos/: README.md  concurrent-load.sh  endpoint-smoke-test.sh  kill-pod-during-write.sh
tests/data/: invalid-data.ttl  sample-dataset.ttl  sample-shapes.ttl
tests/integration/: bulk_load.rs  concurrent_access.rs  sparql_roundtrip.rs
