[package]
name = "oxigraph-coprocessor"
version = "0.1.0"
edition = "2024"
description = "TiKV Coprocessor plugin for Oxigraph query pushdown"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
siphasher = { version = ">=0.3.10, <2.0" }

# TiKV coprocessor_plugin_api types are vendored in src/plugin_api.rs
# (the upstream crate is publish=false and not on crates.io)

[lints]
workspace = true
