[package]
name = "oxigraph-server"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Cloud-native Oxigraph SPARQL server with TiKV and SHACL support"

[[bin]]
name = "oxigraph-cloud"
path = "src/main.rs"

[features]
default = ["rocksdb", "shacl"]
rocksdb = ["oxigraph/rocksdb"]
tikv = ["dep:oxigraph-tikv"]
shacl = ["dep:oxigraph-shacl"]
integration-tests = ["oxigraph-tikv/integration-tests"]

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
oxhttp = { workspace = true, features = ["flate2"] }
oxigraph = { workspace = true, default-features = false }
oxigraph-tikv = { path = "../oxigraph-tikv", optional = true }
oxigraph-shacl = { path = "../oxigraph-shacl", optional = true }
oxiri.workspace = true
flate2.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }
url.workspace = true

[lints]
workspace = true
