[package]
name = "oxigraph-server"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Cloud-native Oxigraph SPARQL server with TiKV and SHACL support"

[[bin]]
name = "oxigraph-cloud"
path = "src/main.rs"

[features]
default = ["rocksdb", "shacl"]
rocksdb = ["oxigraph/rocksdb"]
tikv = ["dep:oxigraph-tikv", "oxigraph/tikv"]
shacl = ["dep:oxigraph-shacl"]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-appender-tracing",
    "dep:tracing-opentelemetry",
    "dep:prometheus",
    "dep:tokio",
]
integration-tests = ["oxigraph-tikv/integration-tests"]

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
dashmap.workspace = true
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { workspace = true, optional = true, features = ["grpc-tonic"] }
opentelemetry-appender-tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
prometheus = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["rt"] }
oxhttp = { workspace = true, features = ["flate2"] }
oxigraph = { workspace = true, default-features = false }
oxigraph-tikv = { path = "../oxigraph-tikv", optional = true }
oxigraph-shacl = { path = "../oxigraph-shacl", optional = true }
oxiri.workspace = true
flate2.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
url.workspace = true
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
